<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:clickable="true"
    android:orientation="vertical">


    <FrameLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="14dp"
        android:background="#eeeeee">

        <ImageView
            android:id="@+id/back"
            android:layout_width="21dp"
            android:layout_height="33dp"
            android:layout_gravity="center_vertical|bottom"
            android:layout_marginBottom="9dp"
            android:layout_marginLeft="16dp"
            android:scaleType="centerInside"
            android:src="@drawable/back" />

        <com.vrexlab.caviar.utils.RobotoTextView
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="right"
            android:layout_marginRight="15dp"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif"
            android:gravity="end"
            android:letterSpacing="-0.04"
            android:text="e-mail"
            android:textColor="#5c79ff"
            android:textSize="14sp"
            android:textStyle="normal" />

        <com.vrexlab.caviar.utils.RobotoTextView
            android:id="@+id/topPanel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="14dp"
            android:gravity="center"
            android:text="@string/Feedback"
            android:textColor="@android:color/black"
            android:textSize="17sp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EfEfEf"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="50dp"
            android:background="#FFFFFF"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/select_title"
                android:layout_width="match_parent"
                android:layout_height="30dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:text="@string/topic"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/feedbak_question" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/left" />
            </LinearLayout>

            <View style="@style/view_h_n" />

            <EditText
                android:id="@+id/content_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="5dp"
                android:background="@null"
                android:inputType="text"
                android:theme="@style/MyEditText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:background="#FFFFFF">

            <ImageView
                android:id="@+id/image_support"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="16dp" />

            <TextView
                android:id="@+id/upload_picture"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:text="@string/feedback_image" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/left" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
